--- a/travel-agency-website-template-143/index.html
+++ b/travel-agency-website-template-143/index.html
@@ -90,7 +90,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="btn btn-primary" href="registration.html">Pendaftaran</a>
+              <a class="btn btn-primary" href="register.html">Pendaftaran</a>
             </li>
           </ul>
         </div>
